# io-template-app

./: .act_secrets  .act_secrets_template  .act_vars  .buildinfo  .dockerignore  .gitattributes  .gitignore  .pylintrc  .settings.io_aero.toml  Dockerfile  LICENSE.html  Makefile  Makefile.html  Pipfile  README.md  README.md.bak  Ruff_vs_Pylint.html  advanced_usage.html  configuration.html  configuration_io_template_app.html  configuration_logging.html  entrypoint.sh  environment.yml  environment_dev.yml  first_steps.html  genindex.html  index.html  installation.html  introduction.html  iotemplate.html  iotemplateapp.html  logging_cfg.yaml  modules.html  objects.inv  py-modindex.html  pyproject.toml  python_packagemanager.html  release_notes.html  requirements.html  run_io_template_app.bat  (+21 more)
.gh-pages-temp/: .buildinfo  configuration_io_template_app.html  first_steps.html  genindex.html  index.html  iotemplateapp.html  modules.html  objects.inv  searchindex.js
.gh-pages-temp/_modules/: index.html
.gh-pages-temp/_sources/: configuration.rst.txt  first_steps.rst.txt  installation.rst.txt  requirements.rst.txt
.github/workflows/: README.md  github_pages.yml  standard.yml  standards.yml  test_development.yml  test_production.yml
_sources/: configuration.rst.txt  configuration_io_template_app.rst.txt  first_steps.rst.txt  index.rst.txt  installation.rst.txt  release_notes.rst.txt  requirements.rst.txt
_sources/tool_evaluations/: index.rst.txt  locking_package_versions.md.txt  makefile_pro_and_con.md.txt  pylint_limitations.md.txt  ruff_vs_pylint.md.txt
_static/: documentation_options.js
config/: .act_secrets  .dockerignore  .gitignore  environment.yml  environment_dev.yml  pyproject.toml
docs/source/: Makefile.md  conf.py  first_steps.rst  index.rst  iotemplate.rst  iotemplateapp.rst  release_notes.rst  requirements.rst
docs/source/tool_evaluations/: combine_conda_and_poetry_migration.md  index.rst  mono_repo_approach.md
img/: README.html
iotemplateapp/: __init__.py  glob.py  glob_local.py  glob_local.pyi  io_glob.py  io_glob.pyi  io_logger.py  io_logger.pyi  io_settings.py  templateapp.py  templateapp.pyi
lib/: iotemplateapp-1.4.1-py3-none-any.whl
libs/: README.md
resources/: README.md
scripts/: README.md  entrypoint.sh  launcher.py  next_version.py  run_install_aws_cli.bat  run_install_aws_cli.sh  run_install_aws_cli.zsh  run_install_miniconda.sh  run_install_python.bat  run_install_python.sh  run_install_python.zsh  run_prep_bash_scripts.sh  run_prep_zsh_scripts.zsh
tests/: conftest.py  test_io_logger.py  test_io_settings.py  test_launcher.py
tool_evaluations/: centralized_configuration.html  combine_conda_and_poetry.html  combine_conda_and_poetry_migration.html  index.html  locking_package_versions.html  makefile_pro_and_con.html  mono_repo_approach.html  pylint_limitations.html  python_packagemanager.html  repository_structure.html  ruff_vs_black.html  ruff_vs_pylint.html  tool_coverage_by_ruff.html
